minor edit/housekeeping activity

--- a/src/pages/egghunt.astro
+++ b/src/pages/egghunt.astro
@@ -29,24 +29,19 @@ const permalink = `${Astro.site!.href}egghunt`;
     <h2>🏆 Leaderboard</h2>
     <ol class="leaderboard">
       <li>
-        <span class="hunter">???</span>
-        <span class="time">--:--:--</span>
+        <span class="hunter">SPITZFIRE</span>
+      </li>
+      <li>
+        <span class="hunter">MUTHAS</span>
+      </li>
+      <li>
+        <span class="hunter">BADSTONE</span>
+      </li>
+      <li>
+        <span class="hunter">EGGHUNTER</span>
       </li>
       <li>
         <span class="hunter">???</span>
-        <span class="time">--:--:--</span>
-      </li>
-      <li>
-        <span class="hunter">???</span>
-        <span class="time">--:--:--</span>
-      </li>
-      <li>
-        <span class="hunter">???</span>
-        <span class="time">--:--:--</span>
-      </li>
-      <li>
-        <span class="hunter">???</span>
-        <span class="time">--:--:--</span>
       </li>
     </ol>
   </section>
@@ -198,17 +193,24 @@ const permalink = `${Astro.site!.href}egghunt`;
     > = {
       "1": {
         name: "Puzzle #1",
-        salt: "sH6L2smGhGQmfCkIC2pB5Q==",
-        iv: "u44h3Msx24xmbDxZ",
+        salt: "BfFa1ZDOcksSB55qE0ONhw==",
+        iv: "c12P4JzB+8Ji98tZ",
         ciphertext:
-          "WQRtgYAcvtvHseK5hMwUC1C+Gi+7ICwLfXzdJ5vDNBJt/KYLn4/JB8PRcR5teESNMnH9JcFvpUdP/Amu0boHqB5jbGft6qc2sW40/qpDOfY4ZZpsYMSi6q3DvxASg5F99APosg==",
+          "V8k7gcRUdUkHE6G09ses1mQAZYsbQKNQA+Nda+1+xl5rrjsiAtv0Atb/S0ad+Sh6gf0tHfoyK0Eo+RzqRBpNmlvVE+of8HLKWFrhb7hwD1F+Fr083H8ZXygmy3KGVoNI5TqymQ==",
       },
       "2": {
         name: "Puzzle #2",
-        salt: "JJcY9Fj+TA4yGt3fM3Cixw==",
-        iv: "ndVlxZUmmdUTeWHY",
+        salt: "bktiMMuk/CxXU4UgDHY/kg==",
+        iv: "D/1yJHSwVqP3FqW4",
         ciphertext:
-          "ltm5U1svK7BEuVg6CtBRJqjdTZiC2VgqaoQjHnaxG/1YzW0/ypFrd5BnkG9S+/z0Z3guZ+eARgD/LU+hAwb8GfJSWv0HDFlCvTxvRSuNr0iUYJAiYe+mJLpBdY3rhR1kTBC58bOV/LT9zUDNVd/Yh0Ru/R69cPkiqpLreiY6gli1+NpbbSd598rZQLI=",
+          "t30w9q0TIrV6AS3LzzoXOHjICdgGZnh/70JKApBy5MiZIbl6+uXTXDR7u/B7PuJ/pd96xC73dkqLjznyNUpC5n7GcUbn8tC1Cvpt9fuVG4j8BMimKHy+6i5ELAFZjRizG+F5HtjbEo5IViEVcLdiAQYqi4ntNf1c/z6DmAnso75rMI8Nah6gya7JQAc=",
+      },
+      "3": {
+        name: "Puzzle #3",
+        salt: "0m7Iv+kzTtholdBaEeEv1Q==",
+        iv: "t+/+iar6pEhFTOU/",
+        ciphertext:
+          "ZiijFW2Cq56KBXQ4JKvvsI3e+IurHVUBWGwoYN8yf/Y0I3IOZy7SClEYjK1gYiB2kSTKwZ3V19dQVB7Unw4f1W0r1Ub3",
       },
     };
 
