--- a/src/pages/egghunt.astro
+++ b/src/pages/egghunt.astro
@@ -37,15 +37,15 @@ const permalink = `${Astro.site!.href}egghunt`;
         <span class="score">3/5</span>
       </li>
       <li>
+        <span class="hunter">LEONK</span>
+        <span class="score">2/5</span>
+      </li>
+      <li>
         <span class="hunter">SPITZFIRE</span>
         <span class="score">1/5</span>
       </li>
       <li>
         <span class="hunter">BADSTONE</span>
-        <span class="score">1/5</span>
-      </li>
-      <li>
-        <span class="hunter">EGGHUNTER</span>
         <span class="score">1/5</span>
       </li>
     </ol>
