--- a/src/pages/egghunt.astro
+++ b/src/pages/egghunt.astro
@@ -41,11 +41,11 @@ const permalink = `${Astro.site!.href}egghunt`;
         <span class="score">2/5</span>
       </li>
       <li>
-        <span class="hunter">SPITZFIRE</span>
-        <span class="score">1/5</span>
+        <span class="hunter">GREEN DOCTOR</span>
+        <span class="score">2/5</span>
       </li>
       <li>
-        <span class="hunter">BADSTONE</span>
+        <span class="hunter">SPITZFIRE</span>
         <span class="score">1/5</span>
       </li>
     </ol>
