--- a/src/pages/egghunt.astro
+++ b/src/pages/egghunt.astro
@@ -38,14 +38,14 @@ const permalink = `${Astro.site!.href}egghunt`;
       </li>
       <li>
         <span class="hunter">LEONK</span>
-        <span class="score">2/5</span>
+        <span class="score">3/5</span>
       </li>
       <li>
         <span class="hunter">GREEN DOCTOR</span>
         <span class="score">2/5</span>
       </li>
       <li>
-        <span class="hunter">SPITZFIRE</span>
+        <span class="hunter">?</span>
         <span class="score">1/5</span>
       </li>
     </ol>
