--- a/src/pages/egghunt.astro
+++ b/src/pages/egghunt.astro
@@ -45,8 +45,8 @@ const permalink = `${Astro.site!.href}egghunt`;
         <span class="score">2/5</span>
       </li>
       <li>
-        <span class="hunter">?</span>
-        <span class="score">1/5</span>
+        <span class="hunter">M4X</span>
+        <span class="score">2/5</span>
       </li>
     </ol>
   </section>
