--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,19 +57,19 @@ const permalink = Astro.site?.href ?? "https://goude.se/";
           This is a margin note. Notice there isn’t a number preceding the note.
         </span> On large screens, a margin note is just a sidenote that omits the
         reference number. This lessens the distracting effect taking away from the
-        flow of the main text, but can increase the cognitive load of matching a
-        margin note to its referent text. However, on small screens, a margin note
-        is like a sidenote except its viewability-toggle is a symbol rather than
-        a reference number. This document currently uses the symbol &#8853; (<code
+        flow of the main text, but can increase the cognitive load of matching a margin
+        note to its referent text. However, on small screens, a margin note is like
+        a sidenote except its viewability-toggle is a symbol rather than a reference
+        number. This document currently uses the symbol &#8853; (<code
           >&amp;#8853;</code
         >), but it’s up to you.
       </p>
       <p>
         Margin notes are created just like sidenotes, but with the <code
           >marginnote</code
-        > class for the content and the <code>margin-toggle</code> class for the
-        label and dummy checkbox. For instance, here is the code for the margin note
-        used in the previous paragraph:
+        > class for the content and the <code>margin-toggle</code> class for the label
+        and dummy checkbox. For instance, here is the code for the margin note used
+        in the previous paragraph:
       </p>
     </section>
   </section>
