--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,21 +1,20 @@
-<style>
-  img.logo {
-    display: block;
-    width: 75px;
-  }
-
-  @media (prefers-color-scheme: dark) {
-    img.logo {
-      filter: invert(1);
-    }
-  }
-</style>
-
 <a
   href="/"
   class="logo"
   title="Guard what you give your attention to. It quietly becomes who you are."
 >
-  <span style="font-size:75px; line-height:1;
-  display:inline-block;"> ⊛ </span>
+  <i class="fa-solid fa-bullseye" aria-hidden="true"></i>
 </a>
+
+<style>
+  .logo {
+    font-size: 1.1em;
+    padding: 0.25rem 0.6rem;
+    color: inherit;
+    text-decoration: none;
+  }
+
+  .logo:hover {
+    opacity: 0.7;
+  }
+</style>
